# AetherDB

./: .gitignore  AGENTS.md  Architecture.md  Cargo.toml  README.md  ROADMAP.md
benches/: metadata_validation.rs
docs/: doc.md
docs/architecture/: day-01-foundation.md  rfc-0001-segment-binary-format.md
src/: lib.rs  main.rs
src/catalog/: mod.rs
src/cli/: mod.rs
src/codec/: metadata.rs  mod.rs
src/core/: config.rs  error.rs  mod.rs  telemetry.rs
src/engine/: mod.rs  read.rs  write.rs
src/index/: mod.rs
src/index/bitmap/: mod.rs
src/index/bkd/: mod.rs
src/index/hnsw/: mod.rs
src/index/inverted/: mod.rs
src/query/: mod.rs  plan.rs
src/query/json/: mod.rs
src/query/sql/: mod.rs
src/server/: mod.rs
src/storage/: cache.rs  local.rs  mod.rs  object.rs  payload.rs
tests/: integration_cli.rs  property_metadata.rs
tests/common/: mod.rs
