[package]
name = "aetherdb"
version = "0.1.0"
edition = "2024"

# ── Runtime ──────────────────────────────────────────────────────────────────
[dependencies]
tokio = { version = "1", features = ["full"] }

# ── Error handling ────────────────────────────────────────────────────────────
thiserror = "2"
anyhow = "1"

# ── Serialization ─────────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── SQL parsing (parse only — custom planner on top) ─────────────────────────
sqlparser = "0.55"

# ── Object storage abstraction (S3-compatible, GCS, Azure, local) ─────────────
object_store = { version = "0.11", features = ["aws", "http"] }

# ── Byte buffers ──────────────────────────────────────────────────────────────
bytes = "1"

# ── IDs ───────────────────────────────────────────────────────────────────────
uuid = { version = "1", features = ["v4", "serde"] }

# ── Logging / tracing ─────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ── CLI ───────────────────────────────────────────────────────────────────────
clap = { version = "4", features = ["derive"] }

# ── Time ──────────────────────────────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }

# ── Checksums ─────────────────────────────────────────────────────────────────
crc32fast = "1"

# ── HTTP server (post-correctness milestone) ───────────────────────────────────
axum = "0.8"

# ── Dev / test ────────────────────────────────────────────────────────────────
[dev-dependencies]
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
